//cd $JDE_DIR/jde/markets/types/proto

//cd $JDE_DIR/jde/markets/types/proto;protoc --cpp_out dllexport_decl=JDE_BLOCKLY_EXECUTOR:. blocklyResults.proto;sed -i -e 's/JDE_BLOCKLY_EXECUTOR/ΓBE/g' blocklyResults.pb.h;sed -i '1s/^/\xef\xbb\xbf/' blocklyResults.pb.h;
//source $JDE_BASH/Framework/common.sh
//cd $JDE_BASH/Blockly/source/types/proto;mv $JDE_BASH/Public/jde/markets/types/proto/blocklyResults.pb.cc .;mklink blocklyResults.pb.h $JDE_BASH/Public/jde/markets/types/proto; mklink ib.pb.h $JDE_BASH/Public/jde/markets/types/proto
//cd $JDE_BASH/BlocklyBuild/build/jde/markets/types/proto; mklink blocklyResults.pb.h $JDE_BASH/Public/jde/markets/types/proto

syntax = "proto3";
package Jde.Markets.MBlockly.Proto;
import "ib.proto";

message EventResult
{
	Jde.Markets.Proto.Order order=1;
	Jde.Markets.Proto.Tick tick=2;
	Jde.Markets.Proto.OrderStatus status=3;
}

message Entry
{
	uint64 time=1;
	oneof value
	{
		EventResult result = 2;
		double limit = 3;
		string error = 4;
		bool end = 5;
	}
}

message FileEntry
{
	uint32 size=1;
	bytes entry=2;
}

message LogFile
{
	repeated FileEntry entries=1;
}