//source ../../../../Framework/common.sh
//cd $JDE_DIR/Public/jde/markets/types/proto;$JDE_DIR/Public/stage/release/protoc --cpp_out dllexport_decl=JDE_MARKETS_EXPORT:. watch.proto;sed -i -e 's/JDE_MARKETS_EXPORT/ΓM/g' watch.pb.h;sed -i '1s/^/\xef\xbb\xbf/' watch.pb.h;
//cd $JDE_DIR/MarketLibrary/source/types/proto;mv $JDE_DIR/Public/jde/markets/types/proto/watch.pb.cc .;mklink watch.pb.h $JDE_DIR/Public/jde/markets/types/proto

syntax = "proto3";
package Jde.Markets.Proto.Watch;
import "ib.proto";

message Entry
{
	uint32 contract_id=1;
	double shares=2;
}

message CashEntry
{
	Currencies currency=1;
	double amount=2;
}

message File
{
	string name=1;
	bool is_portfolio=2;
	repeated Entry securities=3;
	repeated CashEntry currencies=4;
}